# Qt-Advanced-Docking-System

./: CMakeLists.txt
install/lib/: qt5advanceddocking.lib
install/lib/cmake/qt5advanceddocking/: adsTargets-release.cmake  adsTargets.cmake
src/: DockContainerWidget.cpp
